; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_xive.c_xive_write_1.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/powernv/extr_xive.c_xive_write_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xive_softc = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xive_softc*, i64, i32)* @xive_write_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xive_write_1(%struct.xive_softc* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.xive_softc*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.xive_softc* %0, %struct.xive_softc** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.xive_softc*, %struct.xive_softc** %4, align 8
  %8 = getelementptr inbounds %struct.xive_softc, %struct.xive_softc* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.xive_softc*, %struct.xive_softc** %4, align 8
  %11 = getelementptr inbounds %struct.xive_softc, %struct.xive_softc* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %12, %13
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @bus_write_1(i32 %9, i64 %14, i32 %15)
  ret void
}

declare dso_local i32 @bus_write_1(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
